Handle output systemId better